# My_Cpp_Leapning

Bitcloin_mvsc_tpekep/: CMakeLists.txt  main.cpp  pricetrackerwindow.cpp  pricetrackerwindow.h  test.ui
CppDestroyer_msvc16/: CMakeLists.txt  main.cpp
Learning/4_Lesson_logic/: CMakeLists.txt  main.cpp
Learning/6_Lesson_Cyclic/: CMakeLists.txt  main.cpp
Learning/8_Lessson_Pointers/: CMakeLists.txt  main.cpp
Learning/Bitcon/: CMakeLists.txt  conanfile.txt  main.cpp
SeaBattle/: CMakeLists.txt  PlayerSpace.cpp  PlayerSpace.h  main.cpp  mwinndow.cpp  mwinndow.h  mwinndow.ui
test_kute/: CMakeLists.txt  main.cpp  mwindow.cpp  mwindow.h  mwindow.ui
test_msvc_and_ninja/: CMakeLists.txt  main.cpp
test_podvyazki_funcii_k_kute/: CMakeLists.txt  main.cpp  podkladka.cpp  podkladka.h  podkladka.ui
untitled/: CMakeLists.txt  main.cpp
